--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.4",
+    "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "graphql": "^16.8.1"
   }
